# fastCatan

./: .clangd  .gitignore  ARCHITECTURE.md  CMakeLists.txt  HPC.md  LICENSE  PLAN.md  PRESENTATION_INPUT.md  README.md  pyproject.toml  random_test.csv  requirements.txt
AB/: README.md  REPRODUCIBILITY.md  policy.py  soak.py  tournament.py
AB/results/: tournament_ppo_alphabeta_20260527_151542.json  tournament_ppo_alphabeta_20260527_152501.json  tournament_ppo_alphabeta_20260601_100313.json  tournament_ppo_random_20260528_022553.json  validation_1084.md
EVAL/AB/: README.md  mcts_policy.py  mixed_tournament.py  model_divergence.py  tournament.py
EVAL/AB/results/: mixed_1mcts_3ab_20260611_114717.json  mixed_1mcts_3ab_20260613_023706.json  mixed_2mcts_2ab_20260610_000246.json  mixed_2mcts_2ab_20260610_002228.json  mixed_2mcts_2ab_20260610_002520.json  mixed_3mcts_1ab_20260610_002507.json  mixed_3ppo_1ab_20260610_000226.json  model_divergence_20260606_130347.json  model_divergence_20260606_131107.json  model_divergence_20260606_131449.json  tournament_mcts_alphabeta_20260606_122054.json  tournament_mcts_alphabeta_20260606_134423.json  tournament_mcts_alphabeta_20260606_142228.json  tournament_mcts_alphabeta_20260606_152919.json
EVAL/AB/results/probe_xl_notrades/: mixed_1mcts_3ab_20260613_002323.json
EVAL/bridge/: catanatron_bridge.py
bench/: bench_batched.cpp  bench_common.hpp  bench_comprehensive.py  bench_step.cpp  bench_throughput.py  throughput.py
bench/results/20260521_114139/: games_fast_random4.csv
bench/results/20260526_163321/: games_cat_random4.csv  games_fast_random4.csv  summary.csv  timing_breakdown.csv
bench/results/20260526_163520/: games_cat_random4.csv  games_fast_random4.csv  summary.csv
bench/results/throughput_20260526_144649/: batched_scaling.csv  equal_footing.csv  single_env_components.csv
bindings/pycatan/: bindings.cpp
bridge/: PLAN.md  action_codec.py  catanatron_bridge.py  obs_encoder.py  rng_force.py  run_eval.py  state_inject.py  state_mirror.py  topology_map.py
bridge/tests/: differential_diffs.jsonl  test_action_codec.py  test_differential.py  test_end_to_end.py  test_mask_consistency.py  test_obs_encoder.py  test_obs_identity.py  test_parity_replay.py  test_topology.py  test_trades.py
examples/: alphabeta_player.py  player_base.py  random_4player.py  random_player.py  random_player_test.py
include/: batched_env.hpp  mask.hpp  obs.hpp  rng.hpp  rules.hpp  search.hpp  state.hpp  topology.hpp
include/catan/: state.hpp
models/: PLAN.md  bench_envs.py  env.py  eval.py  train_a2c.py  train_dqn.py  train_muzero.py  train_ppo.py
models/alphazero/: batched_eval.py  batched_mcts.py  batched_selfplay.py  evaluate.py  il_dataset.py  il_pretrain.py  league.py  mcts.py  mcts_vs_fixed.py  net.py  train.py
models/checkpoints/a2c/: a2c_final.pt
models/checkpoints/arch_sweep/: sweep_results.csv  sweep_results_cap20_tie-1.csv  sweep_results_cap20_tie-1.md  sweep_results_cap40_tie-2.csv  sweep_results_cap40_tie-2.md  sweep_results_cap50_turncap.md
models/checkpoints/dqn/: dqn_final.pt
models/checkpoints/muzero/: muzero_final.pt
models/checkpoints/ppo_1084_50m/tb/MaskablePPO_1/: events.out.tfevents.1779885229.macintosh.267973.0
models/checkpoints/ppo_random/tb/MaskablePPO_1/: events.out.tfevents.1779454131.eduroam-141-23-165-9.wlan.tu-berlin.de.84385.0
models/selfplay/: CODE_REVIEW_trade_stall.md  PLAN.md  eval_seats.py  gate.py  league.py  opponents.py  run_arch_sweep.sh  selfplay_env.py  sweep.py  train_selfplay.py
python/fastcatan/: __init__.py  alphabeta.py  gym_env.py  pettingzoo_env.py  selfplay.py  tournament.py
scripts/hpc/: README.md  eval_array.sbatch  merge_results.py  selfplay.sbatch  train.sbatch
sim/: fuzz_invariants.cpp
sim/tests/: conftest.py  test_determinism.py  test_invariants.py  test_mask.py  test_scenarios.py  test_scenarios_advanced.py  test_smoke.py
src/catan/: batched_env.cpp  obs.cpp  rules.cpp  search.cpp
tests/: test_batched_mcts.py  test_batched_prims.py
tools/: build_bench.sh  build_lib.sh  c_api.cpp  compare_random_play.py  perft_hashes.json  profile_train.py  test_alphabeta.py  test_batched.py  test_gym.py  test_longest_road.py  test_mask.py  test_nanobind.py  test_obs.py  test_perft.py  test_pettingzoo.py  test_selfplay.py  test_step1.py  test_step2.py  test_step3.py  test_step4.py  test_step5.py  test_step6.py  test_tournament.py  test_trade.py  train_smoke.py  viz_topology.py
ui/: PLAN.md  __init__.py  action_names.py  board_render.py  geometry.py  log_format.py  mask_view.py  obs_decoder.py  obs_layout.py  recorder.py  replay.py  state_panel.py
visual/: viz_topology.py
